added fluid simulation page to the website

--- a/WEB/CPrograms/Bounce/Makefile
+++ b/WEB/CPrograms/Bounce/Makefile
@@ -4,7 +4,7 @@ CFlags = -Wall -std=gnu99 -g
 all: bounce
 
 bounce: bounce.c bounce.h
-	${CC} ${CFlags} $^ -o $@
+	${CC} ${CFlags} $^ -O3 -o $@
 
 
 .PHONY: clean
